--- a/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
+++ b/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
@@ -180,6 +180,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
+
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -197,6 +198,7 @@
   citecolor={Blue},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
+
 
 \title{One-year Causal Effect of Religious Deconversion on Political
 Orientation in New Zealand}
@@ -226,6 +228,7 @@ disaffiliation affects political orientations by reducing conservative
 and (to a lesser extent) right-wing political orientations, with some
 evidence for religious residue effects for political conservativism.
 \end{abstract}
+
 
 \subsection{Introduction}\label{introduction}
 
@@ -399,7 +402,7 @@ Model specification for NZAVS three-wave panel designs operate broadely
 within a targeted learning framework (\citeproc{ref-duxedaz2021}{Díaz
 \emph{et al.} 2021}; \citeproc{ref-vanderlaan2011}{Van Der Laan and Rose
 2011}, \citeproc{ref-vanderlaan2018}{2018}) and are pre-specified in
-(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024}).
+(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}).
 
 \subsubsection{Confounding Control
 Strategy}\label{confounding-control-strategy}
@@ -430,8 +433,8 @@ disjunctive criteria} for confounding control.
 \end{enumerate}
 
 Again, these protocols follow the advice in
-(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024}) as prespecified in
-\url{https://osf.io/ce4t9/}.
+(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}) as prespecified
+in \url{https://osf.io/ce4t9/}.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -474,7 +477,7 @@ the E-value as described below
 (\citeproc{ref-vanderweele2017}{VanderWeele and Ding 2017}). For further
 discussion of our three-wave confounding control strategy, see
 VanderWeele \emph{et al.} (\citeproc{ref-vanderweele2020}{2020});
-Bulbulia (\citeproc{ref-bulbulia2024PRACTICAL}{2024}).
+Bulbulia (\citeproc{ref-bulbulia2024PRACTICAL}{2024a}).
 
 \subsubsection{Missing Data}\label{missing-data}
 
@@ -811,7 +814,7 @@ obtain these quantity from data; (3) providing a robust non-parametric
 statistical estimator specified with minimal modelling assumptions; (4)
 obtaining the relevant panel data and ordering these data such that
 confounders are measured before causes and causes are measured before
-their effects (\citeproc{ref-bulbulia2023}{Bulbulia 2023}).
+their effects (\citeproc{ref-bulbulia2023}{Bulbulia 2024b}).
 
 Study 1 investigates a hypothetical treatment in which religious people
 were randomised to disaffiliate (as dones) compared with a hypothetical
@@ -888,13 +891,14 @@ Atkinson, J, Salmond, C, and Crampton, P (2019) \emph{NZDep2018 index of
 deprivation, user{'}s manual.}, Wellington.
 
 \bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
-Bulbulia, J (2024) A practical guide to causal inference in three-wave
+Bulbulia, JA (2024a) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
 doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
 \bibitem[\citeproctext]{ref-bulbulia2023}
-Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
-practical guide.
+Bulbulia, JA (2024b) Methods in causal inference part 1: Causal diagrams
+and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}.
+Retrieved from \url{https://osf.io/b23k7}
 
 \bibitem[\citeproctext]{ref-campbell2004}
 Campbell, WK, Bonacci, AM, Shelton, J, Exline, JJ, and Bushman, BJ
@@ -1028,7 +1032,7 @@ doi:\href{https://doi.org/10.1097/EDE.0b013e3181bd5638}{10.1097/EDE.0b013e3181bd
 
 \bibitem[\citeproctext]{ref-vanderweele2017}
 VanderWeele, TJ, and Ding, P (2017) Sensitivity analysis in
-observational research: Introducing the e-value. \emph{Annals of
+observational research: Introducing the {E}-value. \emph{Annals of
 Internal Medicine}, \textbf{167}(4), 268--274.
 doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 
@@ -1709,6 +1713,7 @@ conservativism and right-wing political orientation. Additionally, we
 observe 16,569 missing values. To mitigate systematic biases arising
 from attrition and missingness, \texttt{lmtp} package uses inverse
 probability of censoring weights.
+
 
 
 
